# chess

./: CMakeLists.txt
src/: a.out  board.cpp  board.h  main.cpp
